...
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/clearUrl"
                        style="@style/ActionIconNoPadding"
                        app:layout_constraintBottom_toBottomOf="@id/server_url"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/server_url"
                        app:srcCompat="@drawable/ic_close"
                        tools:ignore="ContentDescription" />

                    <ImageView
...
                        app:layout_constraintEnd_toStartOf="@id/clearUrl"
                        app:layout_constraintStart_toEndOf="@id/serverIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed">

                        <org.dhis2.commons.customviews.TextInputAutoCompleteTextView
                            android:id="@+id/server_url_edit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:imeOptions="actionNext"
                            android:inputType="textUri"
                            android:onTextChanged="@{presenter::onServerChanged}"
                            android:padding="5dp"
...
                    app:layout_constraintTop_toBottomOf="@id/serverUrlContainer">

                    <ImageView
                        android:id="@+id/userIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/user_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/user_name"
                        app:srcCompat="@drawable/ic_i_user" />

                    <ImageButton
                        android:id="@+id/clearUserNameButton"
...
                        android:theme="@style/loginInputText"
                        app:layout_constraintEnd_toStartOf="@id/clearUserNameButton"
                        app:layout_constraintStart_toEndOf="@id/userIcon"
                        app:layout_constraintTop_toTopOf="parent">

                        <org.dhis2.commons.customviews.TextInputAutoCompleteTextView
                            android:id="@+id/user_name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:onTextChanged="@{presenter::onUserChanged}"
                            android:textColor="@color/text_black_333"
...


                    <ImageView
                        android:id="@+id/passIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/user_pass"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/user_pass"
                        app:srcCompat="@drawable/ic_i_block" />

                    <ImageButton
                        android:id="@+id/clearPassButton"
...
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toStartOf="@id/clearPassButton"
                        app:layout_constraintStart_toEndOf="@id/passIcon"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_pass_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:onTextChanged="@{presenter::onPassChanged}"
                            android:textColor="@color/text_black_333"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    style="@style/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:onClick="@{()-> presenter.onLoginButtonClick()}"
                    android:text="@string/log_in_button"
...
