...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <Button
            android:id="@+id/login229"
            style="@style/HalfWidthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:padding="5dp"
            android:text="Log in to 2.29"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/env_title" />

        <Button
            android:id="@+id/login230"
...
