...

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--End of Main Content-->

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/bg_white_fdf"
                app:headerLayout="@layout/header_menu"
                app:itemIconTint="@color/icon_color_989"
...
